syntax = "proto3";
package cosmos.tx;

import "gogoproto/gogo.proto";
import "cosmos/cosmos.proto";
import "cosmos/tx/tx.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-sdk/types/tx";

// TxService defines a gRPC convenience service for simulating, broadcasting and querying Tx's.
service TxService {
    // Generate takes a GenerateRequest to build a Tx, optionally simulating the transaction and estimating gas.
    rpc Simulate(SimulateRequest) returns (SimulateResponse) {}
}

// GenerateRequest is the request type for the TxService.Generate RPC method.
message SimulateRequest {
}

// GenerateResponse is the response type for the TxService.Generate RPC method.
message SimulateResponse {
}
